--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8 unselectable">
-    <div class="header-version nowrap">0.3.18</div>
+    <div class="header-version nowrap">0.3.19</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -1085,6 +1085,7 @@ a.link_wavy</pre>
         <button class="button button_label button_warning">Label</button>
         <button class="button button_label button_white">Label</button>
         <button class="button button_label button_black">Label</button>
+        <button class="button button_label button_clear">Label</button>
       </div>
       <div class="flex fw gap4">
         <button class="button button_fs12">Button</button>
@@ -1094,6 +1095,7 @@ a.link_wavy</pre>
         <button class="button button_fs12 button_warning">Button</button>
         <button class="button button_fs12 button_white">Button</button>
         <button class="button button_fs12 button_black">Button</button>
+        <button class="button button_fs12 button_clear">Button</button>
       </div>
       <div class="flex fw gap4">
         <button class="button">Button</button>
@@ -1103,6 +1105,7 @@ a.link_wavy</pre>
         <button class="button button_warning">Button</button>
         <button class="button button_white">Button</button>
         <button class="button button_black">Button</button>
+        <button class="button button_clear">Button</button>
       </div>
       <div class="flex fw gap4">
         <button class="button button_fs20">Button</button>
@@ -1112,6 +1115,7 @@ a.link_wavy</pre>
         <button class="button button_fs20 button_warning">Button</button>
         <button class="button button_fs20 button_white">Button</button>
         <button class="button button_fs20 button_black">Button</button>
+        <button class="button button_fs20 button_clear">Button</button>
       </div>
       <div class="flex fw gap4">
         <button class="button button_fs24">Button</button>
@@ -1121,6 +1125,7 @@ a.link_wavy</pre>
         <button class="button button_fs24 button_warning">Button</button>
         <button class="button button_fs24 button_white">Button</button>
         <button class="button button_fs24 button_black">Button</button>
+        <button class="button button_fs24 button_clear">Button</button>
       </div>
     </div>
     
@@ -1136,7 +1141,8 @@ a.link_wavy</pre>
 .button_warning
 .button_danger
 .button_white
-.button_black</pre>
+.button_black
+.button_clear</pre>
   
   <h3>Variables</h3>
   <pre class="fs14 mono"><span class="op4">/* Required variables */</span>
