--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8 unselectable">
-    <div class="header-version nowrap">0.3.19</div>
+    <div class="header-version nowrap">0.3.20</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -704,7 +704,15 @@
 
         <div class="c1">
           <h3><a class="link" x-modal-open="modalSlider">Slider</a></h3>
-          <div x-slider='{"gap":2}' class="ratio4x3 r3">
+          <style>
+            .slider .slider-item:first-child img {
+              border-radius: var(--space-3) 0 0 var(--space-3);
+            }
+            .slider .slider-item:last-child img {
+              border-radius: 0 var(--space-3) var(--space-3) 0;
+            }
+          </style>
+          <div x-slider='{"gap":2, "rubber":true}' class="ratio4x3 r3">
             <div><img data-srcset="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0430.jpg 2x" alt=""></div>
             <div><img data-src="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0320.jpg" alt=""></div>
             <div><img data-src="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0401.jpg" alt=""></div>
