--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8 unselectable">
-    <div class="header-version nowrap">0.3.37</div>
+    <div class="header-version nowrap">0.3.38</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -713,11 +713,11 @@
             }
           </style>
           <div x-slider='{"gap":2}' class="ratio4x3 r3">
-            <div><img srcset="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0430.jpg 2x" alt=""></div>
-            <div><img src="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0320.jpg" alt=""></div>
-            <div><img src="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0401.jpg" alt=""></div>
-            <div><img src="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0450.jpg" alt=""></div>
-            <div><img src="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0405.jpg" alt=""></div>
+            <div><img data-srcset="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0430.jpg 2x" alt=""></div>
+            <div><img data-src="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0320.jpg" alt=""></div>
+            <div><img data-src="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0401.jpg" alt=""></div>
+            <div><img data-src="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0450.jpg" alt=""></div>
+            <div><img data-src="https://anapa-surfing.ru/-/data/articles/photos/416/800x600q80c/img-0405.jpg" alt=""></div>
           </div>
           <div class="mt2 touch-hide">Move cursor on photo.</div>
           <div class="mt2 touch-show">Drag left or right</div>
