--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8 unselectable">
-    <div class="header-version nowrap">0.3.66</div>
+    <div class="header-version nowrap">0.3.67</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -1536,12 +1536,36 @@ a.link_wavy</pre>
           <th width="60%">Значение по умолчанию</th>
         </tr>
         <tr>
-          <td><code>--modal-margin</code></td>
+          <td><code>--modal-margin-top</code></td>
           <td><code>3vw</code></td>
         </tr>
         <tr>
-          <td><code>--modal-padding</code></td>
-          <td><code>clamp(4rem, 4vw, 5rem) clamp(2.5rem, 4vw, 5rem)</code></td>
+          <td><code>--modal-margin-bottom</code></td>
+          <td><code>3vw</code></td>
+        </tr>
+        <tr>
+          <td><code>--modal-margin-left</code></td>
+          <td><code>3vw</code></td>
+        </tr>
+        <tr>
+          <td><code>--modal-margin-right</code></td>
+          <td><code>3vw</code></td>
+        </tr>
+        <tr>
+          <td><code>--modal-padding-top</code></td>
+          <td><code>clamp(2.5rem, 4vw, 5rem)</code></td>
+        </tr>
+        <tr>
+          <td><code>--modal-padding-bottom</code></td>
+          <td><code>clamp(2.5rem, 4vw, 5rem)</code></td>
+        </tr>
+        <tr>
+          <td><code>--modal-padding-left</code></td>
+          <td><code>clamp(4rem, 4vw, 5rem)</code></td>
+        </tr>
+        <tr>
+          <td><code>--modal-padding-right</code></td>
+          <td><code>clamp(4rem, 4vw, 5rem)</code></td>
         </tr>
         <tr>
           <td><code>--modal-background</code></td>
